--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 spring:
   application:
     name: financeiro-api
-
+    datasource:
+      url: jdbc:postgresql://postgres:5432/findb
+      username: postgres87
+      password: postgres8725
   profiles:
     active: dev  # dev | qa | prod
 
@@ -17,3 +20,5 @@ logging:
   level:
     root: INFO
     org.springframework: INFO
+
+
