criação de segurança no push

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,10 +1,11 @@
 name: CI/CD - Financial API
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  push:
+    branches-ignore: [ "main" ]
+
 
 jobs:
   build-test-package:
