modificações nos mappers

--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,9 @@
     	<dependency>
         	<groupId>org.mapstruct</groupId>
         	<artifactId>mapstruct</artifactId>
-        	<version>1.6.3</version>
+        	<version>1.5.5.Final</version>
     	</dependency>
+
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -80,6 +81,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+        	<groupId>org.mapstruct</groupId>
+        	<artifactId>mapstruct-processor</artifactId>
+        	<version>1.5.5.Final</version>
+        <scope>provided</scope>
+    </dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation-test</artifactId>
 			<scope>test</scope>
@@ -102,11 +109,11 @@
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 						</path>
-						<path>
-                        	<groupId>org.mapstruct</groupId>
-                        	<artifactId>mapstruct-processor</artifactId>
-                        <version>${mapstruct.version}</version>
-                    </path>
+						 <path>
+                			<groupId>org.mapstruct</groupId>
+                			<artifactId>mapstruct-processor</artifactId>
+                			<version>1.5.5.Final</version>
+            			</path>
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
