--- a/pom.xml
+++ b/pom.xml
@@ -75,13 +75,30 @@
         	<groupId>org.mapstruct</groupId>
         	<artifactId>mapstruct-processor</artifactId>
         	<version>1.5.5.Final</version>
-        <scope>provided</scope>
+        	<scope>provided</scope>
     	</dependency>
 		<dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-test</artifactId>
     		<scope>test</scope>
-</dependency>
+		</dependency>
+		<dependency>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>org.mockito</groupId>
+    		<artifactId>mockito-core</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>org.mockito</groupId>
+    		<artifactId>mockito-junit-jupiter</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>com.h2database</groupId>
+    		<artifactId>h2</artifactId>
+    		<scope>test</scope>
+		</dependency>	
 	</dependencies>
 
 	<build>
