--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -11,7 +11,7 @@ spring:
     show-sql: false
 
   flyway:
-    enabled: true
+    enabled: false
     url: jdbc:postgresql://${DB_HOST:prod-postgres}:${DB_PORT:5432}/${DB_NAME:financial_prod}
     user: ${DB_USER:prod_user}
     password: ${DB_PASS:prod_secret}
