--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,10 @@
         	<version>1.5.5.Final</version>
     	</dependency>
 
-		
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
