adição de redis e criação de metodo delete do supplier

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -33,6 +33,10 @@ spring:
 
     listener:
       ack-mode: manual
-
+  cache:
+    type: redis
+  data:
+    redis:
+      port: 6379
 server:
   port: 8080
