--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,12 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     networks:
       - financial-net
-
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+    networks:
+      - financial-net
   postgres-dev:
     image: postgres:15
     container_name: financial-db-dev
@@ -58,35 +63,35 @@ services:
     networks:
       - financial-net
 
-  postgres-qa:
-    image: postgres:15
-    container_name: financial-db-qa
-    restart: always
-    environment:
-      POSTGRES_USER: qa_user
-      POSTGRES_PASSWORD: qa_pass
-      POSTGRES_DB: findb_qa
-    ports:
-      - "5433:5432"
-    volumes:
-      - qa_data:/var/lib/postgresql/data
-    networks:
-      - financial-net
+  # postgres-qa:
+  #   image: postgres:15
+  #   container_name: financial-db-qa
+  #   restart: always
+  #   environment:
+  #     POSTGRES_USER: qa_user
+  #     POSTGRES_PASSWORD: qa_pass
+  #     POSTGRES_DB: findb_qa
+  #   ports:
+  #     - "5432:5433"
+  #   volumes:
+  #     - qa_data:/var/lib/postgresql/data
+  #   networks:
+  #     - financial-net
 
-  postgres-prod:
-    image: postgres:15
-    container_name: financial-db-prod
-    restart: always
-    environment:
-      POSTGRES_USER: prod_user
-      POSTGRES_PASSWORD: prod_secret
-      POSTGRES_DB: financial_prod
-    ports:
-      - "5434:5432"
-    volumes:
-      - prod_data:/var/lib/postgresql/data
-    networks:
-      - financial-net
+  # postgres-prod:
+  #   image: postgres:15
+  #   container_name: financial-db-prod
+  #   restart: always
+  #   environment:
+  #     POSTGRES_USER: prod_user
+  #     POSTGRES_PASSWORD: prod_secret
+  #     POSTGRES_DB: financial_prod
+  #   ports:
+  #     - "5432:5434"
+  #   volumes:
+  #     - prod_data:/var/lib/postgresql/data
+  #   networks:
+  #     - financial-net
 
 networks:
   financial-net:
