--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,14 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		
+		<dependency>
+  			<groupId>com.fasterxml.jackson.core</groupId>
+  			<artifactId>jackson-databind</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>com.fasterxml.jackson.datatype</groupId>
+    		<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 		<dependency>
         	<groupId>org.mapstruct</groupId>
         	<artifactId>mapstruct-processor</artifactId>
